# calendar-app

./: .gitignore  Cargo.toml  README.md  package.json
public/favicon/: site.webmanifest
src/: main.rs
src/components/: Dist.astro  Footer.astro  Form.astro  Header.astro  ImageSelect.astro
src/layouts/: BasicLayout.astro  BlueBox.astro  Button.astro  Desc.astro  Prose.astro
src/pages/: index.astro
src/typst/: lib.typ
